--- a/package.json
+++ b/package.json
@@ -6,16 +6,27 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@nuxt/image": "^0.6.2",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/prismic": "^1.4.2",
+    "@nuxtjs/style-resources": "^1.2.1",
+    "@prismicio/slice-simulator-vue": "^0.2.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0",
+    "stylus": "^0.58.1",
+    "stylus-loader": "3.0.2",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "slice-machine-ui": "^0.3.8"
+  }
 }
