--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "stylus": "^0.58.1",
     "stylus-loader": "3.0.2",
     "vue": "^2.6.14",
+    "vue-carousel-3d": "^1.0.1",
     "vue-server-renderer": "^2.6.14",
+    "vue-slick-carousel": "^1.0.6",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
