--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -19,14 +19,20 @@
       }
     },
     "casestudie": {},
-    "general": {}
+    "general": {},
+    "teammembers": {},
+    "joiners": {}
   },
   "slices": {
     "TeamMember": {
       "default": {
-        "items": {
+        "items": {},
+        "primary": {
           "image": {
             "content": "https://images.unsplash.com/photo-1438761681033-6461ffad8d80"
+          },
+          "hasVideo": {
+            "content": false
           }
         }
       }
