--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/style-resources": "^1.2.1",
     "@prismicio/slice-simulator-vue": "^0.2.1",
     "core-js": "^3.19.3",
+    "dayjs": "^1.11.3",
     "nuxt": "^2.15.8",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
