--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -1,6 +1,13 @@
 {
   "_cts": {
-    "imprint": {},
+    "imprint": {
+      "bodytext": {
+        "config": {
+          "patternType": "PARAGRAPH",
+          "blocks": 1
+        }
+      }
+    },
     "teammember": {
       "image": {
         "content": "https://images.unsplash.com/photo-1438761681033-6461ffad8d80"
@@ -35,7 +42,15 @@
     },
     "general": {},
     "teammembers": {},
-    "joiners": {}
+    "joiners": {},
+    "dataprivacy": {
+      "bodytext": {
+        "config": {
+          "patternType": "PARAGRAPH",
+          "blocks": 1
+        }
+      }
+    }
   },
   "slices": {
     "TeamMember": {
@@ -47,6 +62,12 @@
           },
           "hasVideo": {
             "content": false
+          },
+          "detailedCV": {
+            "config": {
+              "patternType": "PARAGRAPH",
+              "blocks": 1
+            }
           }
         }
       }
