manage countdown content via backend

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -57,7 +57,8 @@
         }
       }
     },
-    "herosection": {}
+    "herosection": {},
+    "comingSoon": {}
   },
   "slices": {
     "TeamMember": {
