--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/image": "^0.6.2",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/prismic": "^1.4.2",
     "@nuxtjs/style-resources": "^1.2.1",
     "@prismicio/slice-simulator-vue": "^0.2.1",
