--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pug-plain-loader": "^1.1.0",
     "stylus": "^0.58.1",
     "stylus-loader": "3.0.2",
+    "swiper": "^8.3.2",
     "vue": "^2.6.14",
     "vue-carousel-3d": "^1.0.1",
     "vue-server-renderer": "^2.6.14",
